# software_renderer

./: .gitignore  CMakeLists.txt  format-all.sh  format-file.sh
.cache/clangd/index/: pixelbuffer.cc.2F3D120FFCFDA606.idx  pixelbuffer.h.61C6BBEDE77B2720.idx  pixelbuffer_test.cc.B5D712965B7E9DFD.idx
include/: camera.h  mesh.h  pixelbuffer.h  renderer.h  scene.h  sr_math.h  texture.h  window.h
lib/: mesh.cc  pixelbuffer.cc  texture.cc
tests/: CMakeLists.txt  mesh_test.cc  pixelbuffer_test.cc  texture_test.cc
